--- a/examples/package.json
+++ b/examples/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --watch",
+    "start": "webpack --watch --mode=development",
     "build": "webpack"
   },
   "keywords": [],
