--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "@babel/core": "^7.27.3",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
     "@wordpress/dependency-extraction-webpack-plugin": "^6.21.0",
+    "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
